src/test/deca/syntax/invalid/provided/nom_var_invalide6.deca
{
int ds@d;
int ds#d;
}
